# russian-rl

./: .gitignore  AGENTS.md  README.md  architecture.md  deployment.md  main.py  pyproject.toml
.github/workflows/: deploy.yml
agents/: __init__.py  random_agent.py
backend/: main.py
backend/api/: auth.py  game_websocket.py  leaderboard.py
backend/models/: __init__.py  database.py
backend/services/: __init__.py  auth.py  elo.py
deploy/: README.md  deploy.sh  nginx.conf  setup-server.sh  ugolki.service
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: GameBoard.tsx  Header.tsx
frontend/src/hooks/: useGameSocket.ts
frontend/src/i18n/: en.json  index.ts  ru.json
frontend/src/lib/: api.ts  auth.tsx
frontend/src/pages/: Game.tsx  Leaderboard.tsx  Lobby.tsx  Login.tsx  Signup.tsx
games/: __init__.py  base.py  ugolki.py
notebooks/: exploration.ipynb
roulette/: runner.py
roulette/agents/: __init__.py  base.py  naive_maxscore.py  random_agent.py
roulette/game/: __init__.py  base.py  ugolki.py
tests/: test_ugolki.py
